# azure-batch-speech

./: pyproject.toml
src/batch/: models.py  speech.py
