[build-system]
requires = ["hatchling", "requests"]
build-backend = "hatchling.build"

[project]
name = "Azure-Batch-Speech"
version = "0.0.1"
authors = [
  { name="Gabriel Pinto Sasaki", email="gabrielpintosasaki@outlook.com" },
]
description = "A small library to create batch jobs transcription from audio files"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"